--- a/Medite-HTML/medite.css
+++ b/Medite-HTML/medite.css
@@ -1,5 +1,12 @@
-
-	 a{
+#txt_window_2, #txt_window{
+height: 600px;
+overflow-y: scroll;}
+	 
+a{
+text-decoration:none;
+color:inherit;
+}
+a.pb{
 	 color:inherit;
      background-color:#b4ffb4;
  }
@@ -23,11 +30,12 @@ text-indent: 0;
 font-size: 1.5em;
 font-weight: lighter;
 margin: 0.5em 0 0.5em 0;}
- a:hover,a:focus{
-                 background:rgba(0,0,0,.4);
-                 box-shadow:0 1px 0 rgba(255,255,255,.4);
-				 text-decoration: none;
-            }
+ a:hover{
+background:#ddf7d4;
+text-decoration: none;
+}
+            
+a:focus{text-decoration: none;}
  a.note span, a.note2 span{
                  position:absolute;
                  /*width:40%;*/
@@ -48,7 +56,7 @@ font-size: 19px;
 
 
 
-             a:hover span, a:focus span{
+             a.note:hover span, a.note:focus span{
                 transform:scale(1) rotate(0);
                 opacity:1;
                text-decoration: none;
@@ -152,7 +160,7 @@ margin-right: 3%;
 margin-left: 3%;
 
 }
-
+.comparaison-html #windows>div>div:last-child .span_c:hover,.comparaison-html #windows>div>div:last-child .survol-cible{background:#EEE;cursor:pointer}
  
 .deplacement{background: #e5d30a; color: #FFF;}
 .insertion{background: #44ac20; color: #FFF;}
@@ -171,25 +179,10 @@ text-decoration:underline;}
 
 	 a{
 	 color:inherit;
+text-decoration: none;
 
  }
- a:hover,a:focus{
-                 background:rgba(0,0,0,.4);
-                 box-shadow:0 1px 0 rgba(255,255,255,.4);
-				 text-decoration: none;
 
-            }
-
-
-
-             a:hover span, a:focus span{
-                transform:scale(1) rotate(0);
-                opacity:1;
-                /*font-size:15px;*/
-
-               text-decoration: none;
-               margin-right:0px;
-            }
 
 div#txt_title1, div#txt_title2{
 font-size: 2em;
@@ -216,7 +209,7 @@ text-indent: 0 !important; }
 p.center{
 text-align: center;}
 .txt_container{
-width: 43%}
+width: 40%}
 div.legal, div.treatise, div.press{
 margin: 1em 0 1em 2em;}
 .letter{
@@ -257,7 +250,7 @@ comparaison-html #modifications.active
 .comparaison-html #rempl_ins_supp>div>h4,.comparaison-html #depl>div>h4{background:#EEE;padding:5px 10px;cursor:pointer}
 .comparaison-html #rempl_ins_supp>div>h4 .nbr_occurences,.comparaison-html #depl>div>h4 .nbr_occurences
 {color:#AAA}
-.comparaison-html #rempl_ins_supp>div>h4:hover,.comparaison-html #depl>div>h4:hover{color:#FFF}
+.comparaison-html #rempl_ins_supp>div>h4:hover,.comparaison-html #depl>div>h4:hover{color:#FFF; height: 30px, overflow-y:scroll;}
 .comparaison-html #rempl_ins_supp>div>h4:hover .nbr_occurences,.comparaison-html #depl>div>h4:hover .nbr_occurences
 {color:#FFF}
 .comparaison-html #rempl_ins_supp>div>h4 img,.comparaison-html #depl>div>h4 img{display:none}
